# hearth

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
packaging/: hearth.openrc  install.sh
src/: config.rs  main.rs
src/ambient/: canonical.rs  client.rs  mod.rs  model.rs
src/api/: mod.rs  server.rs  state.rs
src/domain/: entity.rs  mod.rs  observation.rs  value.rs
src/dyson/: canonical.rs  credential.rs  mod.rs  model.rs  source.rs
src/ecoflow/: canonical.rs  client.rs  mod.rs  model.rs
src/schlage/: auth.rs  canonical.rs  client.rs  error.rs  mod.rs  model.rs
src/smartthings/: auth.rs  capability.rs  client.rs  mod.rs  provision.rs  sink.rs  source.rs
src/whisker/: auth.rs  canonical.rs  client.rs  error.rs  history.rs  mod.rs  model.rs
