[package]
name = "hearth"
version = "0.1.0"
edition = "2024"
description = "A small self-hosted home-automation hub in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "net"] }
# Local HTTP API sink (`[api]`): serves the latest-value snapshot on the LAN.
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
# EcoFlow IoT Open API request signing (HMAC-SHA256, lowercase hex).
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Dyson local MQTT credential derivation: base64(SHA-512(wifi_password)).
base64 = "0.22"
# Dyson local MQTT source (subscribe to status/current, prime via command topic).
rumqttc = "0.24"
